--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,8 @@
    "source": [
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for name_and_rank in "
+    "for name_and_rank in names_and_ranks :\n",
+    "    print"
    ]
   },
   {
