automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for name_and_rank in names_and_ranks :\n",
-    "    print ()"
+    "    print (names_and)"
    ]
   },
   {
