--- a/index.ipynb
+++ b/index.ipynb
@@ -214,10 +214,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = [] \n",
+    "names_and_ranks = ['stri'] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for name_and_rank in names_and_ranks :\n",
-    "    print (names_and)"
+    "    print (names_and_ranks)"
    ]
   },
   {
