--- a/index.ipynb
+++ b/index.ipynb
@@ -210,11 +210,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['string']\n"
+     ]
+    }
+   ],
    "source": [
-    "names_and_ranks = ['stri'] \n",
+    "names_and_ranks = ['string'] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for name_and_rank in names_and_ranks :\n",
     "    print (names_and_ranks)"
