--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = [list] \n",
+    "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for name_and_rank in names_and_ranks :\n",
     "    print (names_and_ranks)"
