automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,14 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['string']\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-4dc3d3e1e2e1>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-4dc3d3e1e2e1>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_ranks = [list(range(0,len(cities))) : city_names]\u001b[0m\n\u001b[0m                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
