--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for name_and_rank in names_and_ranks :\n",
+    "for city in cityes :\n",
     "    print (names_and_ranks)"
    ]
   },
