automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,8 +224,8 @@
    ],
    "source": [
     "names_and_ranks = [] \n",
-    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for city in cityes :\n",
+    "# write a for loopthat adds the properly formatted string to the names_and_ranks list\n",
+    "for index in cityes :\n",
     "    print (names_and_ranks)"
    ]
   },
