--- a/index.ipynb
+++ b/index.ipynb
@@ -224,9 +224,9 @@
    ],
    "source": [
     "names_and_ranks = [] \n",
-    "# write a for loopthat adds the properly formatted string to the names_and_ranks list\n",
-    "for index in cityes :\n",
-    "    print (names_and_ranks)"
+    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
+    "for index in city_indices :\n",
+    "    print (names_and_ran)"
    ]
   },
   {
