--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices :\n",
-    "    print (names_and_ran)"
+    "    print ()"
    ]
   },
   {
