--- a/index.ipynb
+++ b/index.ipynb
@@ -210,14 +210,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
       "1\n",
       "2\n",
       "3\n",
@@ -228,7 +227,8 @@
       "8\n",
       "9\n",
       "10\n",
-      "11\n"
+      "11\n",
+      "12\n"
      ]
     }
    ],
@@ -236,7 +236,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices :\n",
-    "    print (index )"
+    "    print (index +1)"
    ]
   },
   {
