--- a/index.ipynb
+++ b/index.ipynb
@@ -210,23 +210,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-16-95c000e8965f>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-95c000e8965f>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    names_and_ranks.append({index + 1}.{city_names[index]})\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['{index + 1}.{city_names[index]}',\n",
+       " '{index + 1}.{city_names[index]}',\n",
+       " '{index + 1}.{city_names[index]}',\n",
+       " '{index + 1}.{city_names[index]}',\n",
+       " '{index + 1}.{city_names[index]}',\n",
+       " '{index + 1}.{city_names[index]}',\n",
+       " '{index + 1}.{city_names[index]}',\n",
+       " '{index + 1}.{city_names[index]}',\n",
+       " '{index + 1}.{city_names[index]}',\n",
+       " '{index + 1}.{city_names[index]}',\n",
+       " '{index + 1}.{city_names[index]}',\n",
+       " '{index + 1}.{city_names[index]}']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices :\n",
-    "    names_and_ranks.append(\"{index + 1}.{city_names[index]})\n",
+    "    names_and_ranks.append(\"{index + 1}.{city_names[index]}\")\n",
     "\n",
     "names_and_ranks"
    ]
