--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for popula"
+    "for population in city_populations :"
    ]
   },
   {
