--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for population in city_populations :"
+    "for population in city_populations :\n",
+    "    print()"
    ]
   },
   {
