automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -275,13 +275,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_populations = []\n",
     "for population in city_populations :\n",
-    "    print()"
+    "    print(city_population)"
    ]
   },
   {
