--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
    "source": [
     "city_populations = []\n",
     "for population in city_populations :\n",
-    "    city_p"
+    "    city_population.append(\"\")"
    ]
   },
   {
