--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for population in city:\n",
+    "for population in cities:\n",
     "    city_populations.append(city[\"Population\"])\n",
     "\n",
     "city_populations"
