--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
    "source": [
     "city_populations = []\n",
     "for population in cities:\n",
-    "    city_populations.append(cities['Population'])\n",
+    "    city_populations.append(city['Population'])\n",
     "\n",
     "city_populations"
    ]
