--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for population in cities:\n",
+    "for city in cities:\n",
     "    city_populations.append(city['Population'])\n",
     "\n",
     "city_populations"
