automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -452,7 +452,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for city i"
+    "for city in cities:\n",
+    "    "
    ]
   },
   {
