--- a/index.ipynb
+++ b/index.ipynb
@@ -453,7 +453,7 @@
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    "
+    "    city_areas.append(ci)"
    ]
   },
   {
